feat(Styling): add dynamic viewport height page and content

--- a/src/Root.css
+++ b/src/Root.css
@@ -7,7 +7,7 @@ body {
 }
 
 #sidebar {
-  width: 22rem;
+  width: 20%;
   background-color: #f7f7f7;
   border-right: solid 1px #e3e3e3;
   display: flex;
